# secure-shell

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  TASK-TESTS.md
.github/workflows/: ci.yml
src/: audit.rs  config.rs  lib.rs  persistence.rs  policy.rs
src/runtime/: docker.rs  mod.rs  native.rs
src/sandbox/: bubblewrap.rs  detect.rs  docker.rs  firejail.rs  landlock.rs  mod.rs  seatbelt.rs
tests/: policy_integration.rs  sandbox_integration.rs
